--- a/index.html
+++ b/index.html
@@ -7,31 +7,8 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <div id="root">
-      <h2>Abhishek is here</h2>
-      <h2>Abhishek is here</h2>
-      <h2>Abhishek is here</h2>
-      <h2>Abhishek is here</h2>
-      <h2>Abhishek is here</h2>
-    </div>
+    <div id="root"></div>
 
-    <!-- <script>
-      const heading = document.createElement("h2");
-      heading.innerHTML = "Hello from JS";
-      const root = document.getElementById("root");
-
-      root.appendChild(heading);
-    </script> -->
-
-    <script
-      crossorigin
-      src="https://unpkg.com/react@18/umd/react.development.js"
-    ></script>
-    <script
-      crossorigin
-      src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
-    ></script>
-
-    <script src="app.js"></script>
+    <script type="module" src="src/app.js"></script>
   </body>
 </html>
